solved a variable problem

--- a/javascript/introduction-to-js-1/tasks/variables/variables1-download.html
+++ b/javascript/introduction-to-js-1/tasks/variables/variables1-download.html
@@ -27,11 +27,12 @@
   </body>
   <script>
     // Add your code here
-
+  let myName
+  myName = 'dami'
+  let myAge =19
     // Don't edit the code below here!
 
     const section = document.querySelector('section');
-
     const para1 = document.createElement('p');
     para1.textContent = myName;
     const para2 = document.createElement('p');
