--- a/javascript/introduction-to-js-1/tasks/variables/variables3-download.html
+++ b/javascript/introduction-to-js-1/tasks/variables/variables3-download.html
@@ -28,10 +28,10 @@
   <script>
     // Add your code here
 
-    const myName = 'Default';
-    myName = 'Chris';
+    let myName = 'Default';
+    myName = 'dami';
 
-    let myAge = '42';
+    let myAge = 42;
 
     // Don't edit the code below here!
 
