i solved a math problem

--- a/javascript/introduction-to-js-1/tasks/math/math1-download.html
+++ b/javascript/introduction-to-js-1/tasks/math/math1-download.html
@@ -31,8 +31,15 @@
     let evenOddResult;
 
     // Add your code here
+    let a = -6
+    let b = 18
+    let c = 8
+    let d = 4
 
-
+    let x = a+b
+    let y = c-d
+    finalResult = x*y
+    evenOddResult = finalResult % 2
 
     // Don't edit the code below here!
 
