attempted a string assesmemt

--- a/javascript/introduction-to-js-1/tasks/strings/strings1-download.html
+++ b/javascript/introduction-to-js-1/tasks/strings/strings1-download.html
@@ -28,8 +28,9 @@
   <script>
     // Add your code here
 
-    const quoteStart = 'Don't judge each day by the harvest you reap ';
-
+    let quoteStart = 'Don\'t judge each day by the harvest you reap ';
+    quoteEnd= "but by the seeds you plant" 
+    finalQuote = quoteStart + quoteEnd
     // Don't edit the code below here!
 
     const section = document.querySelector('section');
