--- a/javascript/introduction-to-js-1/tasks/strings/strings2-download.html
+++ b/javascript/introduction-to-js-1/tasks/strings/strings2-download.html
@@ -31,9 +31,13 @@
 
     // Add your code here
 
+    let quoteLength = quote.length
+    let index = quote.indexOf(substring)
+    let revisedQuote = `${quote.slice(0,index)}$substring.`
+
     // Don't edit the code below here!
 
-    const section = document.querySelector('section');
+   const section = document.querySelector('section');
 
     section.innerHTML = ' ';
     const para1 = document.createElement('p');
