--- a/javascript/introduction-to-js-1/tasks/strings/strings3-download.html
+++ b/javascript/introduction-to-js-1/tasks/strings/strings3-download.html
@@ -29,7 +29,12 @@
     const quote = 'I dO nOT lIke gREen eGgS anD HAM';
 
     // Add your code here
-
+     let fixedQuote = quote.toLowerCase()
+     firstLetter = fixedQuote.slice(0,1)
+     fixedQuote = fixedQuote.replace(firstLetter, firstLetter.toUpperCase()) 
+     let hate = 'fufu and agbado' 
+     fixedQuote = fixedQuote.replace('green eggs and ham', hate)
+     finalQuote = `${fixedQuote}.` 
     // Don't edit the code below here!
 
     const section = document.querySelector('section');
